# open-typing-trainer

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
